--- a/api-automation/pom.xml
+++ b/api-automation/pom.xml
@@ -18,7 +18,7 @@
   <build>
     <plugins>
 
-    <!-- COMPILER PLUGIN -->
+      <!-- COMPILER PLUGIN -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -39,7 +39,7 @@
           </suiteXmlFiles>
         </configuration>
       </plugin>
-      
+
     </plugins>
   </build>
 
@@ -58,7 +58,7 @@
       <artifactId>webdrivermanager</artifactId>
       <version>6.3.3</version>
     </dependency>
-    
+
     <!-- https://mvnrepository.com/artifact/org.testng/testng -->
     <dependency>
       <groupId>org.testng</groupId>
@@ -67,11 +67,17 @@
       <scope>test</scope>
     </dependency>
     <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
-<dependency>
-    <groupId>com.googlecode.json-simple</groupId>
-    <artifactId>json-simple</artifactId>
-    <version>1.1.1</version>
-</dependency>
+    <dependency>
+      <groupId>com.googlecode.json-simple</groupId>
+      <artifactId>json-simple</artifactId>
+      <version>1.1.1</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/io.rest-assured/json-schema-validator -->
+    <dependency>
+      <groupId>io.rest-assured</groupId>
+      <artifactId>json-schema-validator</artifactId>
+      <version>6.0.0</version>
+    </dependency>
   </dependencies>
 
 
