--- a/api-automation/pom.xml
+++ b/api-automation/pom.xml
@@ -78,6 +78,12 @@
       <artifactId>json-schema-validator</artifactId>
       <version>6.0.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.21.0</version>
+    </dependency>
   </dependencies>
 
 
